--- a/workspace/diagnosis.Rmd
+++ b/workspace/diagnosis.Rmd
@@ -8,7 +8,7 @@ date: "2024-02-24"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r load_packages, echo=FALSE, warning=FALSE, message=FALSE, results='hide'}
+```{r load_packages, echo=FALSE, warning=FALSE, message=FALSE, results='hide'} #h
 library(dplyr)
 library(ggplot2)
 library(knitr)
