--- a/workspace/diagnosis.Rmd
+++ b/workspace/diagnosis.Rmd
@@ -129,3 +129,19 @@ jba3
 ```
 
 From the heavy tailed form of the Q-Q plot we can deduce that the assumption of normal residuals is violated in this case. This is also evidenced by a Jarque-Bera test that yielded a p-value of `jba3$p.value` indicating that we should reject the null hypothesis of normality. 
+
+#Table
+
+```{r}
+library(knitr)
+
+data <- data.frame(
+  Column_1 = c("Model", "(p,d,q)x(P,D,Q)", "AIC"),
+  Column_2 = c("Model 1", "ARIMA(3,0,0)x(2,1,0)_12", aic.1),
+  Column_3 = c("Model 2", "SARMA(3,0,2)x(1,1,1)", aic.2),
+  Column_4 = c("Model 3", "AR(2)", "Row_3_Col_3", aic.3)
+)
+
+# Create table
+kable(data)
+```
